--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,10 @@
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    String storageUrl = System.env.FLUTTER_STORAGE_BASE_URL ?: "https://storage.googleapis.com"
     repositories {
         google()
         mavenCentral()
         gradlePluginPortal()
-        maven { url "$storageUrl/download.flutter.io" }
-        maven { url 'C:\\Users\\rayyt\\OneDrive\\Documents\\flutter_module\\build\\host\\outputs\\repo' }
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "async"
