--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <service android:name=".soundService" android:enabled="true"/>
         <service android:name=".thunderService" android:enabled="true"/>
+        <service android:name=".sfxService" android:enabled="true"/>
         <activity
             android:name=".MainActivity"
             android:hardwareAccelerated="true"
