--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,16 +32,17 @@ android {
 }
 
 dependencies {
-    implementation "com.android.billingclient:billing:6.0.1"
+    implementation "com.android.billingclient:billing:7.0.0"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.android.billingclient:billing:6.0.1'
-    implementation files('C:/Users/rayyt/OneDrive/Documents/async/app/libs/guava-20.0.jar')
+    implementation 'com.android.billingclient:billing:7.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.lincollincol:AudioTool:1.2.1'
     implementation 'com.arthenica:mobile-ffmpeg-full:4.3.1.LTS'
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.3'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.18.3'
 }
