--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="com.android.vending.BILLING" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,9 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Async"
         tools:targetApi="31">
-        <service android:name=".soundService" android:enabled="true"/>
-        <service android:name=".thunderService" android:enabled="true"/>
-        <service android:name=".sfxService" android:enabled="true"/>
+        <service android:name=".soundService" android:enabled="true" android:foregroundServiceType="mediaPlayback"/>
+        <service android:name=".randFreeSfx" android:enabled="true" android:foregroundServiceType="mediaPlayback"/>
+        <service android:name=".loopingPremSfx" android:enabled="true" android:foregroundServiceType="mediaPlayback"/>
         <activity
             android:name=".MainActivity"
             android:hardwareAccelerated="true"
