--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
     <application
+        android:screenOrientation="sensorPortrait"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,9 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Async"
         tools:targetApi="31">
-        <service android:name=".soundService" android:enabled="true" android:foregroundServiceType="mediaPlayback"/>
-        <service android:name=".randFreeSfx" android:enabled="true" android:foregroundServiceType="mediaPlayback"/>
-        <service android:name=".loopingPremSfx" android:enabled="true" android:foregroundServiceType="mediaPlayback"/>
+        <service android:name=".soundService" android:enabled="true" android:screenOrientation="portrait" android:foregroundServiceType="mediaPlayback"/>
+        <service android:name=".randFreeSfx" android:enabled="true" android:screenOrientation="portrait" android:foregroundServiceType="mediaPlayback"/>
+        <service android:name=".loopingPremSfx" android:enabled="true" android:screenOrientation="portrait" android:foregroundServiceType="mediaPlayback"/>
         <activity
             android:name=".MainActivity"
             android:hardwareAccelerated="true"
